Update java to LTS 25, Spring Boot 3.5.6, gradle to 9.1 and more 3rd-… (#18)
## 🧩 Summary

This merge request upgrades the project to **Java 25 (LTS)** along with
related framework and build tool updates to ensure full compatibility
and long-term support.

---

## 🚀 Changes

- Updated Java version to **25**
- Upgraded **Spring Boot** to **3.5.6**
- Upgraded **Gradle** to **9.1**
- Updated and aligned third-party dependencies
- Fixed deprecated API usages and refactored affected code
- Adjusted build and CI scripts for Java 25 compatibility
- Verified that all tests compile and run successfully

---

## 💡 Motivation & Benefits

- Ensures compatibility with the latest **Java LTS** version  
- Gains performance, security, and maintainability improvements  
- Enables use of newer library versions and features  
- Keeps the project future-proof and compliant with supported platforms

---